--- a/src/main/resources/templates/news.html
+++ b/src/main/resources/templates/news.html
@@ -1,14 +1,21 @@
 <!DOCTYPE HTML>
-<html xmlns:th="http://www.thymeleaf.org">
+<html xmlns:th="http://www.thymeleaf.org"
+      xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout">
+      <!--layout:decorate="~{layout/default}">-->
+      <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 <head> 
-    <title>Getting Started: Serving Web Content</title> 
-    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 </head>
 <body>
+    <!--<div layout:fragment="content">-->
     <h1>News</h1>
-    <div th:each="n : ${news}">
-        <p th:text="${n.title}"></p>
-        <pre th:text="${n.text}"></pre>
+    <div class="container">
+        <div class="row">
+            <div class="col-sm" th:each="n : ${news}">
+                <p th:text="${n.title}"></p>
+                <!--<pre th:text="${n.text}"></pre>-->
+            </div>
+        </div>
     </div>
+    <!--</div>-->
 </body>
 </html>
