--- a/src/main/resources/templates/layout/default.html
+++ b/src/main/resources/templates/layout/default.html
@@ -1,28 +1,25 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org" xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout">
 <head>
-    <!--/*  Each token will be replaced by their respective titles in the resulting page. */-->
-    <title layout:title-pattern="$LAYOUT_TITLE - $CONTENT_TITLE">Task List</title>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <title layout:title-pattern="$LAYOUT_TITLE - $CONTENT_TITLE">No title</title>
 </head>
 <body>
-<!--&lt;!&ndash;/* Standard layout can be mixed with Layout Dialect */&ndash;&gt;-->
-<!--<div th:replace="fragments/header :: header">-->
-<!--</div>-->
+<ul class="nav nav-pills justify-content-center">
+    <li class="nav-item">
+        <a class="nav-link active" href="/news">News</a>
+    </li>
+    <li class="nav-item">
+        <a class="nav-link" href="/contacts">Contacts</a>
+    </li>
+    <li class="nav-item">
+        <a class="nav-link" href="/greeting">Start</a>
+    </li>
+</ul>
 <div class="container">
+
     <div layout:fragment="content">
-        <!-- ============================================================================ -->
-        <!-- This content is only used for static prototyping purposes (natural templates)-->
-        <!-- and is therefore entirely optional, as this markup fragment will be included -->
-        <!-- from "fragments/header.html" at runtime.                                     -->
-        <!-- ============================================================================ -->
-        <h1>Static content for prototyping purposes only</h1>
-        <p>
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-            Praesent scelerisque neque neque, ac elementum quam dignissim interdum.
-            Phasellus et placerat elit. Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-            Praesent scelerisque neque neque, ac elementum quam dignissim interdum.
-            Phasellus et placerat elit.
-        </p>
+        <p>Empty</p>
     </div>
     <!--<div th:replace="fragments/footer :: footer">&copy; 2014 The Static Templates</div>-->
 </div>
