include in greeting

--- a/src/main/resources/templates/news.html
+++ b/src/main/resources/templates/news.html
@@ -11,7 +11,7 @@
             <div class="row">
                 <div class="col-sm" th:each="n : ${news}">
                     <p th:text="${n.title}"></p>
-                    <pre th:text="${n.text}"></pre>
+                    <!--<pre th:text="${n.text}"></pre>-->
                 </div>
             </div>
         </div>
