--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -8,6 +8,11 @@
 <body>
     <div layout:fragment="content">
         <p>Index</p>
+
+        <form method="post" action="/files" enctype="multipart/form-data">
+            <input type="file" name="file" id="file"/>
+            <input type="submit" value="Load"/>
+        </form>
     </div>
 </body>
 </html>
